# cortex

./: .gitignore  README.md  cortex_output.json  cortex_single_output.json  pyproject.toml
src/: Cortex.py  CortexSingle.py  evaluate_mgsm.py  main.py
src/agents/: Emotion.py  Feedback.py  Language.py  Perception.py  Reasoning.py  Reasoning_benchmark.py
src/data/mgsm/: test.jsonl
